--- a/style.css
+++ b/style.css
@@ -29,3 +29,59 @@ body {
   color: #fff!important;
   border-radius: 5px;
 }
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+
+.carousel-container {
+  position: relative;
+  width: 80%;
+  max-height: 50vh;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 20px; /* Add margin to the top */
+}
+
+.carousel {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  max-height: 50vh; 
+}
+
+.carousel-item {
+  display: flex;
+  
+  min-width: 100%;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.carousel-item p{
+  padding: 30px;
+}
+.carousel-item img {
+  width: auto;
+  max-height: 100%; 
+
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
+}
+
