--- a/style.css
+++ b/style.css
@@ -1,41 +1,42 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
+  font-family: 'EB Garamond', serif; 
+  margin: 0;
+  padding: 0;
+  background-color: #f9f6f2; 
+  color: #3d3d3d; 
 }
 .container {
-    display: flex;
-    width: 100%;
-    height : 100px;
-    align-items: center;
-    background: #CEDEBD;
-    padding: 10px; 
+  max-width: 800px;
+  margin: auto;
 }
-.container .logo {
+.nav-container {
+  display: flex;
+  width: 100%;
+  height : 100px;
+  align-items: center;
+  background: #CEDEBD;
+  padding: 10px; 
+}
+
+.nav-container .logo {
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: 0%;
   margin-left: 5px;
   height: auto;
 }
-.container .btnprimary{
+.nav-container .btnprimary{
     border: none;
     background-color: #0376b8;
     color: #fff!important;
     border-radius: 8px;
 }
-.container .btn{
+.nav-container .btn{
   border: none;
   background-color: #0367b8;
   color: #fff!important;
   border-radius: 5px;
 }
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
 
 .carousel-container {
   position: relative;
@@ -46,14 +47,14 @@ body {
   margin-top: 20px; 
 }
 .carousel {
-  margin: 10px 40px;
+  margin: 10px 10%;
   display: flex;
   transition: transform 0.5s ease-in-out;
   max-height: 50vh; 
 }
 
 .carousel-item {
-  margin: 0 40px 0 0;
+  margin: 0 15% 0 0;
   min-width: 100%;
   box-sizing: border-box;
   display: flex; 
@@ -83,5 +84,48 @@ body {
 
 .next {
   right: 10px;
+}
+
+.cta-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #b5895c;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+  background-color: #8e735b; 
+}
+
+.trending-books,
+.about-section,
+.footer {
+  background-color: #fff; /* White background for sections */
+  padding: 40px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.trending-books h2,
+.about-section h2 {
+  color: #6e5137;
+}
+
+.about-section p {
+  font-size: 1.1em;
+  line-height: 1.6;
+}
+
+.footer {
+  margin-top: 40px;
+}
+
+.footer a {
+  margin: 0 15px;
+  text-decoration: none;
+  color: #6e5137;
 }
 
