--- a/style.css
+++ b/style.css
@@ -2,14 +2,16 @@ body {
   font-family: 'EB Garamond', serif; 
   margin: 0;
   padding: 0;
-  background-color: #f9f6f2; 
+  background-color: #f0efec; 
   color: #3d3d3d; 
 }
+
 .container {
   max-width: 800px;
   margin: auto;
   padding: 10px 0;
 }
+
 .nav-container {
   display: flex;
   width: 100%;
@@ -39,7 +41,7 @@ body {
 .browse-component.hear-dropdown {
   margin-right: 100px;
 }
-.browse-component.hear-dropdown .dropdown-compenent ul {
+.browse-component.hear-dropdown .dropdown-component ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
@@ -47,7 +49,7 @@ body {
   width: 100%;
 }
 
-.browse-component.hear-dropdown .dropdown-compenent li {
+.browse-component.hear-dropdown .dropdown-component li {
   display: table-row;
   list-style-type: none;
 }
@@ -58,12 +60,12 @@ body {
   list-style: none;
 }
 
-.browse-component.hear-dropdown details:hover .dropdown-compenent {
+.browse-component.hear-dropdown details:hover .dropdown-component {
   display: block;
 }
 
 
-.browse-component.hear-dropdown .dropdown-compenent {
+.browse-component.hear-dropdown .dropdown-component {
   position: absolute;
   top: 100%;
   left: 0;
@@ -74,7 +76,7 @@ body {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.browse-component.hear-dropdown .dropdown-compenent a {
+.browse-component.hear-dropdown .dropdown-component a {
   display: block;
   width: 100%;
   padding: 15px; /* Adjust the padding as needed */
@@ -87,11 +89,11 @@ body {
   text-overflow: ellipsis;
 }
 
-.browse-component.hear-dropdown .dropdown-compenent a:hover {
+.browse-component.hear-dropdown .dropdown-component a:hover {
   background-color: #f5f5f5; /* Add a background color on hover */
 }
 
-.browse-component.hear-dropdown details:hover .dropdown-compenent {
+.browse-component.hear-dropdown details:hover .dropdown-component {
   display: block;
 }
 
@@ -141,7 +143,6 @@ body {
   max-height: 50vh;
   margin: auto;
   overflow: hidden;
-  margin-top: 20px; 
 }
 .carousel {
   margin: 10px 10%;
@@ -197,18 +198,21 @@ body {
   background-color: #8e735b; 
 }
 
-.trending-books,
-.about-section,
-.footer {
-  background-color: #fff; /* White background for sections */
-  padding: 40px 0;
+.trending-books, .about-section, .footer {
+  margin: 80px;
+  background-color: #fff;
+  padding: 20px 0 30px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .trending-books h2,
 .about-section h2 {
+  font-size: 2em;
   color: #6e5137;
+  margin: 10px 0 0;
 }
 
 .about-section p {
