--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
   justify-content: space-between;
   align-items: center;
   background: #CEDEBD;
-  margin-right: auto;
+  padding-right: 40px;
+  box-sizing: border-box;
 }
 
 
