--- a/style.css
+++ b/style.css
@@ -118,13 +118,34 @@ body {
 
 
 .user-options a {
-  color: #F3B664;
+  color: #0a0907;
   text-decoration: none;
 }
 
-.divider {
-  margin: 0 2px;
-  color: #F3B664;
+.button { 
+  background-color: #58257b; 
+  border: none;  
+  color: white;  
+  padding: 7px 15px;  
+  text-align: center;  
+  text-decoration: none;  
+  display: inline-block;  
+  font-size: 16px;  
+  margin: 4px 2px;  
+  -webkit-transition-duration: 0.4s; /* Safari */  
+  transition-duration: 0.4s;  
+  cursor: pointer;  
+  border-radius: 4px;
+}
+.login-link {  
+  background-color: white;      
+  border: 2px solid #EC8F5E;
+}
+
+.signup-link {  
+  background-color: #F1B4BB; 
+  color: white;  
+  border: 2px solid #F1B4BB;
 }
 
 
