update css and button

--- a/detail.css
+++ b/detail.css
@@ -53,6 +53,10 @@ body {
     border-radius: 5px;
     cursor: pointer;
   }
+
+  .borrow-button.back-button {
+    background-color: #635b55;
+  }
   
 /* review section */
 
